--- a/Resources/CSS/Styles.css
+++ b/Resources/CSS/Styles.css
@@ -542,7 +542,15 @@ font-weight: bold;
 }
 .txtboxes{
     font-weight: bolder;
-    width: auto;
+    width: 350px;
+    font-size: 24px;
+    text-transform: uppercase;
+    margin-bottom: 0;
+    padding-bottom:0;
+}
+.txtboxes2{
+    font-weight: bolder;
+    width: 50px;
     font-size: 24px;
     text-transform: uppercase;
     margin-bottom: 0;
